updating the registration

--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -11,11 +11,13 @@
                  <p class="detail">This is a Retail Netbanking Portal. You can manage your account securites online.</p>
 
 				<h1 class="netbanking">Registration</h1>
-                <input class="username" type="username" placeholder="Email ID" />
-				<input class="username" type="Username" placeholder="Username" />
-				<input class="password" type="Password" placeholder="Password" />
-                <input class="password" type="Password" placeholder="Confirm Password" />
-                <a href=""><button type="button" class="sign_in">REGISTER</button></a>	
+                <input class="username" type="number" placeholder="Account No." name="accNo" />
+                <input class="username" type="username" placeholder="Email ID" name="email" />
+				<input class="password" type="Password" placeholder="PIN" name="pin" />
+				<input class="username" type="Username" placeholder="Username" name="username" />
+				<input class="password" type="Password" placeholder="Password" name="password" />
+                <input class="password" type="Password" placeholder="Confirm Password" name="cpassword"/>
+                <button type="submit" class="sign_in">REGISTER</button>
                 <p>Already have an account? <a href=""><button type="button" class="sign_in">LOG-IN</button></a></p>
 			</form>
 
