--- a/views/home.ejs
+++ b/views/home.ejs
@@ -16,5 +16,16 @@
         <a class="home_heads" href="">ONLINE ACCESS</a>
         <a href="" class="detail">Access anywhere on any device at the convenience of your fingertips.</a>
       </form>
+
+
     </div>
-    <%- include("partials/aside") %>
+    <div class="overlay-container">
+      <div class="overlay">
+        <div class="overlay-panel overlay-right">
+          <img class="fullLOGO" src="Resources/smallLOGO.png" alt="Eminent">
+
+        </div>
+      </div>
+    </div>
+  </div>
+  <%- include("partials/footer") %>
