--- a/public/CSS/styles.css
+++ b/public/CSS/styles.css
@@ -218,7 +218,6 @@ form {
 
 input {
 	background-color: transparent;
-	border: ;
 	padding: 12px 15px;
 	margin: 8px 0;
 	width: 100%;
@@ -236,6 +235,7 @@ input {
 	overflow: hidden;
 	max-width: 100%;
 	min-height: 550px;
+  margin-bottom: 150px;
 }
 
 .container_home {
@@ -250,6 +250,22 @@ input {
 	overflow: hidden;
 	max-width: 100%;
 	min-height: 780px;
+  margin-bottom: 150px;
+}
+
+.container_register {
+  margin-bottom: 50px;
+  margin-top: 50px;
+  margin-left: 20%;
+  margin-right: 20%;
+	background-color: rgb(163, 185, 228);
+	border-radius: 10px;
+  box-shadow: 0 14px 28px rgba(8, 161, 161, 0.25), 0 10px 10px rgba(2, 81, 100, 0.22);
+	position: relative;
+	overflow: hidden;
+	max-width: 100%;
+	min-height: 700px;
+  margin-bottom: 150px;
 }
 
 .fullLOGO{
@@ -316,3 +332,257 @@ input {
 	right: 0;
 }
 
+
+.already{
+  border-color: transparent;
+  border-radius: 15px;
+  padding: 7px 10px 7px 10px;
+  margin-left: 5px;
+  font-family: 'Oswald', sans-serif;
+  font-size: 15px;
+  color: rgb(255, 255, 255);
+  background: rgb(114, 187, 230);
+  border: transparent;
+  
+}
+
+.already:hover{
+  transition-duration: 0.4s;
+  background:#E63946;
+  transform: scale(1.1);
+  color: #eedfe0;
+}
+
+h3 {
+  color: #1D3557;
+}
+
+p {
+  color: #457B9D;
+}
+
+
+.title{
+  color: #F1FAEE;
+  background: #022236;
+  background: linear-gradient(-45deg,#0b1c33, #162944);
+  margin-bottom: 30px;
+  border-radius: 10px;
+  box-shadow: 0 14px 28px rgba(0,0,0,0.25), 10px 10px 10px rgba(0,0,0,0.22);
+  width: 400px;
+  margin-left: 450px;
+
+  text-align: center;
+  padding: 5px 25px;
+  font-size: 12px;
+  font-family: 'Montserrat', sans-serif;
+
+}
+
+.container_profile {
+	background-color: #F1FAEE;
+	border-radius: 10px;
+  	box-shadow: 0 14px 28px #457B9D, 0 10px 10px rgba(0,0,0,0.22);
+	
+	text-align: center;
+    
+    margin-left: 348px;
+    padding-bottom: 8px;
+    width: 640px;
+    margin-bottom: 150px;
+}
+
+.conTable {
+    border-collapse: collapse;
+    width: 100%;
+}
+  
+.conTable th, td {
+    padding: 4px;
+    padding-left: 70px;
+    padding-right: 70px;
+    text-align: left;
+    border-bottom: 1px solid #ddd;
+}
+
+
+.profile{
+    text-align: center;
+    padding-top: 10px;
+    color: #A8DADC;
+    background-color: #1D3557;
+    border-radius: 10px 10px 0px 0px;
+    padding-bottom: 10px;
+    font-size: 16px;
+
+    margin-bottom: 0px;
+    border-bottom: 6px solid #457B9D;
+}
+
+.first{
+    text-align: center;
+    color: #F1FAEE;
+    margin-top: 0px;
+    font-size: 12px;
+    background-color: #457B9D;
+
+    border-bottom: 6px solid #457B9D;
+}
+
+table .conLast{
+    border-bottom: none;
+}
+
+button.logOut {
+	border: 1.5px solid #457B9D;
+    border-radius: 10px;
+	background-color: #1D3557;
+	color: #F1FAEE;
+	font-size: 12px;
+	font-weight: bold;
+	padding: 12px 45px;
+	letter-spacing: 1px;
+	text-transform: uppercase;
+    width: 200px;
+    margin-left: 120px;
+    margin-top: 20px;
+}
+
+.logOut:hover{
+    color: white;
+    transition-duration: 0.4s;
+    background:#E63946;
+    border-radius: 0px;
+}
+
+.stdhead{
+    margin: 200px;
+    color:rgb(233, 103, 103);
+    font-family: 'Oswald', sans-serif;
+    font-size: 3rem;
+}
+
+a.forgotPassword{
+    padding-bottom: 4px;
+    float: right;
+    font-size: 12px;
+    font-weight: bold;
+    margin-right: 8px;
+    margin-top: 0px;
+    margin-bottom: 0px;
+    color: #1D3557;
+}
+
+.forgotPassword:hover{
+    transition-duration: 0.4s;
+    color:#E63946;
+    border-radius: 0px;
+}
+
+footer{
+    
+    background: #022236;
+    min-height: 300px;
+    color: #9ebde9;
+    margin: -5%;
+}
+   
+.fHead {
+    color: #F1FAEE;
+    background: linear-gradient(-135deg,#022236, #85222b,#022236);
+    
+    font-size: 20px;
+    font-weight: 400;
+    letter-spacing: 15px;
+    text-align: center;
+    padding-top: 20px;
+    padding-bottom: 10px;
+}
+
+.footTable {
+    border-collapse: collapse;
+    border: none;
+    width: 100%;
+    border-color: #E63946;
+}
+  
+.footTable th, td {
+    padding: 20px;
+    padding-left: 70px;
+    padding-right: 70px;
+    border: none;
+    text-align: left;
+}
+
+table .last{
+    color: #F1FAEE;
+    font-weight: 400;
+}
+
+.container_transfer {
+
+  margin-bottom: 150px;
+  margin-top: 50px;
+  margin-left: 20%;
+  margin-right: 20%;
+	border-radius: 10px;
+  box-shadow: 0 14px 28px rgba(8, 161, 161, 0.25), 0 10px 10px rgba(2, 81, 100, 0.22);
+	position: relative;
+	overflow: hidden;
+	max-width: 100%;
+	min-height: 600px;
+}
+.transfer_wel{
+  text-align: center;
+}
+
+.transfer_desc{
+  text-align: center;
+  margin-left:20%;
+  margin-right: 20%;
+}
+.transfer_button{
+  font-family: 'Oswald', sans-serif;
+  font-size: large;
+  font-weight: bolder;
+  border-color: #e4aeb2;
+  border-radius: 15px;
+  background-color:#E63946;
+  color: #eedfe0;
+  padding: 7px 15px 5px 15px;
+}
+
+.container-calc {
+  padding: 30px;
+  margin-bottom: 50px;
+	background-color: #F1FAEE;
+	border-radius: 10px;
+  box-shadow: 0 14px 28px rgba(8, 161, 161, 0.25), 0 10px 10px rgba(2, 81, 100, 0.22);
+	position: relative;
+	overflow: hidden;
+	max-width: 100%;
+	min-height: 5650px;
+}
+.input_calc{
+  max-width: 300px;
+  color:rgb(66, 121, 240);
+  font-weight:bolder;
+  background:  #A8DADC;
+  border: #90c0db solid;
+  border-radius: 10px;
+}
+.calc_buttons{
+  color:rgb(5, 62, 85);
+  font-weight:bolder;
+  background:  #A8DADC;
+  border: #90c0db solid;
+  border-radius: 20px;
+  max-width: 300px;
+}
+.display-box{
+  background:#e4aeb2;
+  border-radius: 10px;
+  color: #E63946;
+  transition-duration: 0.2s;
+  font-weight: bolder;
+}
