--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -17,7 +17,7 @@
                 <a  href="/login"><button class = "head" type="button">LOGIN</button></a>
                 <a  href="/signup"><button class = "head" type="button">REGISTER</button></a>
 
-                <a  href=""><button class = "head"type="button">CALCs</button></a>
+                <a  href="/calculator"><button class = "head"type="button">CALCs</button></a>
             </ul>
         </div>
     </div>
