--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -15,7 +15,7 @@
                             online.</p>
 
                         <h1 class="netbanking">Registration</h1>
-                        <input class="username" type="username" placeholder="Account Number" name="accNo" />
+                        <input class="username" type="username" placeholder="Account Number" name="accountNo" />
                         <input class="username" type="Password" placeholder="PIN" name="pin" />
                         <input class="username" type="username" placeholder="Email ID" name="email" />
                         <input class="username" type="Username" placeholder="Username" name="username" />
