--- a/views/calc.ejs
+++ b/views/calc.ejs
@@ -1,25 +1,4 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="CSS/styles.css">
-    <link rel="icon" type="image/x-icon" href="Resources/smallLOGO.png">
-    <title>Eminent Net Banking Portal</title>
-</head>
-<body>
-    <div class="headergraphic">
-        <div class="navbar">
-            <img class="logo" src="Resources/smallLOGO.png" alt="Eminent">
-            <ul class="navmenu">
-                <a  href="home.html"><button class = "head" type="button">HOME</button></a>
-                <a  href="index.html"><button class = "head" type="button">LOGIN</button></a>
-                <a  href="register.html"><button class = "head" type="button">REGISTER</button></a>
-                <a  href="Calculators/calc.html"><button class = "head" type="button">CALCs</button></a>
-            </ul>
-        </div>
-    </div>
+<%- include('partials/dashboard_nav') %>
     <h1 style="text-align: center;"><br>Interest Calculator</h1>
     <h4 style="text-align: center;">Service provided by Eminent Banking Solutions<br><br></h4>
 
