--- a/public/CSS/dashboard_styles.css
+++ b/public/CSS/dashboard_styles.css
@@ -1,6 +1,7 @@
 @import url("https://fonts.googleapis.com/css2?family=Oswald:wght@500&display=swap");
 @import url("https://fonts.googleapis.com/css?family=Montserrat:400,600,800");
-
+@import url('https://fonts.googleapis.com/css2?family=Oswald:wght@500&display=swap');
+@import url('https://fonts.googleapis.com/css?family=Montserrat:400,800');
 body {
   overflow-x: hidden;
   background-color: #a8dadc;
@@ -170,6 +171,7 @@ background: linear-gradient(27deg, rgba(2,0,36,1) 0%, rgba(7,77,132,1) 100%, rgb
   display: flex;
   align-items: flex-start;
   justify-content: left;
+  margin-bottom: 150px;
 }
 
 .card{
@@ -263,4 +265,210 @@ background: linear-gradient(27deg, rgba(2,0,36,1) 0%, rgba(7,77,132,1) 100%, rgb
 .holiday_text{
   font-size: 20px;
   font-weight: 400;
+}
+.profile_h3 {
+  color: #1D3557;
+  font-family: Montserrat;
+}
+
+.profile_p {
+  color: #457B9D;
+  font-family: Montserrat;
+}
+
+
+.title{
+  color: #F1FAEE;
+  background: #022236;
+  margin-bottom: 30px;
+  border-radius: 10px;
+  box-shadow: 0 14px 28px rgba(0,0,0,0.25), 10px 10px 10px rgba(0,0,0,0.22);
+  width: 400px;
+  margin-left: 420px;
+  background: linear-gradient(27deg, rgba(2,0,36,1) 0%, rgba(7,77,132,1) 100%, rgba(2,34,54,1) 100%);
+  text-align: center;
+  padding: 5px 25px;
+  font-size: 12px;
+  font-family: 'Montserrat', sans-serif;
+
+}
+
+.container_profile {
+	background-color: #A8DADC;
+	border-radius: 10px;
+  	box-shadow: 0 14px 28px #457B9D, 0 10px 10px rgba(0,0,0,0.22);
+	
+	text-align: center;
+    
+    margin-left: 320px;
+    padding-bottom: 8px;
+    width: 640px;
+    margin-bottom: 150px;
+}
+
+.conTable {
+    border-collapse: collapse;
+    width: 100%;
+    font-family: Montserrat
+}
+  
+.conTable th, td {
+    padding: 4px;
+    padding-left: 70px;
+    padding-right: 70px;
+    text-align: left;
+    border-bottom: 1px solid #457B9D;
+}
+
+
+.profile{
+    text-align: center;
+    padding-top: 10px;
+    color: #E63946;
+    color: #E63946;
+    background-color: #1D3557;
+    border-radius: 10px 10px 0px 0px;
+    padding-bottom: 10px;
+    font-size: 16px;
+    font-family: Montserrat;
+
+    margin-bottom: 0px;
+    border-bottom: 6px solid #457B9D;
+}
+
+.first{
+    text-align: center;
+    color: #F1FAEE;
+    margin-top: 0px;
+    font-size: 12px;
+    background-color: #457B9D;
+    font-family: Montserrat;
+
+    border-bottom: 6px solid #457B9D;
+}
+
+table .conLast{
+    border-bottom: none;
+}
+
+button.logOut {
+	border: 1.5px solid #457B9D;
+    border-radius: 10px;
+	background-color: #1D3557;
+	color: #F1FAEE;
+	font-size: 12px;
+	font-weight: bold;
+	padding: 12px 45px;
+	letter-spacing: 1px;
+	text-transform: uppercase;
+    width: 200px;
+    margin-left: 120px;
+    margin-top: 20px;
+}
+
+.logOut:hover{
+    color: white;
+    transition-duration: 0.4s;
+    background:#E63946;
+    border-radius: 0px;
+}
+
+.stdhead{
+    margin: 200px;
+    color:rgb(233, 103, 103);
+    font-family: 'Oswald', sans-serif;
+    font-size: 3rem;
+}
+
+a.forgotPassword{
+    padding-bottom: 4px;
+    float: right;
+    font-size: 12px;
+    font-weight: bold;
+    margin-right: 8px;
+    margin-top: 0px;
+    margin-bottom: 0px;
+    color: #1D3557;
+    font-family: Montserrat;;
+}
+
+.forgotPassword:hover{
+    transition-duration: 0.4s;
+    color:#E63946;
+    border-radius: 0px;
+}
+
+footer{
+    
+    background: #022236;
+    min-height: 300px;
+    color: #9ebde9;
+    margin: -5%;
+    font-family: Montserrat;
+}
+   
+.fHead {
+    color: #F1FAEE;
+    background: linear-gradient(-135deg,#022236, #85222b,#022236);
+    
+    font-size: 20px;
+    font-weight: 400;
+    letter-spacing: 15px;
+    text-align: center;
+    padding-top: 20px;
+    padding-bottom: 10px;
+}
+
+.footTable {
+    border-collapse: collapse;
+    border: none;
+    width: 100%;
+    border-color: #E63946;
+}
+  
+.footTable th, td {
+    padding: 20px;
+    padding-left: 70px;
+    padding-right: 70px;
+    border: none;
+    text-align: left;
+}
+
+table .last{
+    color: #F1FAEE;
+    font-weight: 400;
+}
+.container-calc {
+  padding: 30px;
+  margin-bottom: 50px;
+	background-color: #F1FAEE;
+	border-radius: 10px;
+  box-shadow: 0 14px 28px rgba(8, 161, 161, 0.25), 0 10px 10px rgba(2, 81, 100, 0.22);
+	position: relative;
+	overflow: hidden;
+	max-width: 100%;
+	min-height: 5650px;
+}
+.input_calc{
+  max-width: 300px;
+  color:rgb(66, 121, 240);
+  font-weight:bolder;
+  background:  #A8DADC;
+  border: #90c0db solid;
+  border-radius: 10px;
+}
+.calc_buttons{
+  color:rgb(5, 62, 85);
+  font-weight:bolder;
+  background:  #A8DADC;
+  border: #90c0db solid;
+  border-radius: 20px;
+  max-width: 300px;
+}
+.display-box{
+  background:#e4aeb2;
+  border-radius: 10px;
+  color: #E63946;
+  transition-duration: 0.2s;
+  font-weight: bolder;
 }
