--- a/views/calculators/interestcalc.ejs
+++ b/views/calculators/interestcalc.ejs
@@ -1,4 +1,26 @@
-<%- include('partials/dashboard_nav') %>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="CSS/styles.css">
+    <link rel="icon" type="image/x-icon" href="Resources/smallLOGO.png">
+    <title>Eminent Net Banking Portal</title>
+</head>
+<body>
+    <div class="headergraphic">
+        <div class="navbar">
+            <img class="logo" src="Resources/smallLOGO.png" alt="img" />
+            <ul class="navmenu">
+                <a href="/user"><button class="head" type="button">DASHBOARD</button></a>
+                <a href="/profile"><button class="head" type="button">PROFILE</button></a>
+                <!-- <a href="/calculator"><button class="head" type="button">CALC</button></a> -->
+                <a href="/logout"><button class="head" type="button">LOGOUT</button></a>
+            </ul>
+        </div>
+    </div>
+
     <h1 style="text-align: center;"><br>Interest Calculator</h1>
     <h4 style="text-align: center;">Service provided by Eminent Banking Solutions<br><br></h4>
 
@@ -33,7 +55,7 @@
 		</div>
 	</div>
 
-    <script type="text/javascript" src="Javascript/script.js"></script>
+    <script type="text/javascript" src="../Javascript/script.js"></script>
 </body>
 <footer >
     <h3 class="fHead" >EMINENT BANKING SOLUTIONS</h3>
