--- a/views/partials/dashboard_nav.ejs
+++ b/views/partials/dashboard_nav.ejs
@@ -17,7 +17,7 @@
             <ul class="navmenu">
                 <a href="/user"><button class="head" type="button">DASHBOARD</button></a>
                 <a href="/profile"><button class="head" type="button">PROFILE</button></a>
-                <a href="/calculator"><button class="head" type="button">CALC</button></a>
+                <!-- <a href="/calculator"><button class="head" type="button">CALC</button></a> -->
                 <a href="/logout"><button class="head" type="button">LOGOUT</button></a>
             </ul>
         </div>
