--- a/views/transfer.ejs
+++ b/views/transfer.ejs
@@ -48,7 +48,7 @@
                         <input class="username" type="Username" placeholder="Name of Account Holder" name="sendname" />
                         <input class="password" type="Password" placeholder="Account Number" name="sendaccount" />
                         <input class="username" type="Username" placeholder="IFSC Code" />
-                        <input class="username" type="Username" placeholder="Amount(₹)" name="amount" name="sendamount"/>
+                        <input class="username" type="Username" placeholder="Amount(₹)" name="sendamount"/>
                         <input class="username" type="Password" placeholder="PIN" name="pin" />
                         <input type="hidden" value="<%= user.local.username %>" name="username" />
                         <button type="submit" class="sign_in">TRANSFER</button>
