--- a/views/index.ejs
+++ b/views/index.ejs
@@ -11,7 +11,7 @@
 
     <div class="box">
       <div class="balance_display">
-        <p class="balance">
+        <p class="balance">Current Balance 
           <%= user.balance %>/-
         </p>
       </div>
